Remove borders from audio player and ensure video players or gallery images don't inherit the overlap class.

--- a/css/media.css
+++ b/css/media.css
@@ -18,3 +18,10 @@ object {
 .attachment {
   margin-bottom: 1em;
 }
+
+/* remove borders from audio player buttons */
+
+.mejs-controls button {
+  border: none;
+  outline: transparent;
+}
